fixed grid issue, still working on extra space removal

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,15 +1,11 @@
 @import "@hashicorp/design-system-components";
 
 #hds-main {
-  padding: 5em 10em 0 5em;
+  padding: 5em 5em 0;
 }
 
 footer {
   padding: 1em 0 2em;
-}
-
-aside {
-  padding: 2em 4em;
 }
 
 body {
